added carbon ads functionality

--- a/scss/_components/_base.scss
+++ b/scss/_components/_base.scss
@@ -4,7 +4,14 @@ html {
   font-family: $font;
   font-weight: 400;
 }
-
+body:not(:-moz-handler-blocked)  {
+  main.\--page {
+    .\--page-body {
+      //width: calc(100% - 220px);
+      //padding-left:220px !important;
+    }
+  }
+}
 body {
   display: flex;
   flex-direction: column;
