--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@
 @import "_components/_breadcrumb";
 @import "_components/_helpbox";
 @import "_components/_highlighting";
+@import "_components/_ads";
 
 
 
