--- a/scss/_components/_base.scss
+++ b/scss/_components/_base.scss
@@ -4,7 +4,8 @@ html {
   font-family: $font;
   font-weight: 400;
 }
-body:not(:-moz-handler-blocked)  {
+
+body:not(:-moz-handler-blocked) {
   main.\--page {
     .\--page-body {
       //width: calc(100% - 220px);
@@ -12,16 +13,17 @@ body:not(:-moz-handler-blocked)  {
     }
   }
 }
+
 body {
   display: flex;
   flex-direction: column;
   p, table, tr, th, td {
     line-height: 1.85;
     font-weight: 400 !important;
-    a{
-      font-weight:400 !important;
+    a {
+      font-weight: 400 !important;
       color: $blue !important;
-      &:hover{
+      &:hover {
         color: $bblue !important;
       }
     }
@@ -190,27 +192,29 @@ h6 {
   opacity: 1;
   @extend .tooltip-fi;
 }
-pre{
+
+pre {
   position: relative;
 }
-span.copyCode{
-  top:0;
-  right:0;
+
+span.copyCode {
+  top: 0;
+  right: 0;
   display: flex;
   align-items: center;
-  div.icon{
+  div.icon {
     transform: scale(0.75);
-    opacity:0.3;
-    margin-top:2px;
+    opacity: 0.3;
+    margin-top: 2px;
   }
-  padding:$unit;
-  border-bottom:$border;
-  border-left:$border;
+  padding: $unit;
+  border-bottom: $border;
+  border-left: $border;
   //font-family:$op;
   background: darken($lb, 5%);
   position: absolute;
-  font-family:"Open Sans", sans-serif !important;
-  &.zeroclipboard-is-hover{
+  font-family: "Open Sans", sans-serif !important;
+  &.zeroclipboard-is-hover {
     background: white;
     cursor: pointer;
   }
@@ -234,17 +238,17 @@ span.copyCode{
 
 .fiu {
   animation: fadeInUp 0.5s forwards ease-in-out;
-  opacity:1 !important;
+  opacity: 1 !important;
 }
 
 .tooltip-fi {
   animation: fadeInUp 0.18s forwards ease-in-out;
-  opacity:1 !important;
+  opacity: 1 !important;
 }
 
 .fiud {
   //animation: fadeInUp 0.5s forwards ease-in-out;
-  opacity:1 !important;
+  opacity: 1 !important;
 }
 
 main {
@@ -252,8 +256,6 @@ main {
   //opacity: 0;
 
 }
-
-
 
 .mobile-menu-btn {
 
@@ -332,8 +334,8 @@ pre {
   background-color: rgb(244, 244, 248);
   margin: $unit 0;
   border: $border;
-  width:100%;
-  max-width:100%;
+  width: 100%;
+  max-width: 100%;
   overflow: auto;
 
   code {
@@ -342,17 +344,17 @@ pre {
     width: 100%;
     background-color: rgb(244, 244, 248);
     padding: $unit*2 !important;
-    width:100%;
-    max-width:100%;
+    width: 100%;
+    max-width: 100%;
     overflow: auto;
   }
 }
 
 // getting started
 section.section {
-  h2{
+  h2 {
     //font-weight:300;
-  @extend h1;
+    @extend h1;
   }
 }
 
@@ -365,12 +367,14 @@ section.section {
   color: #333;
   padding: 50px;
 }
+
 .page404-heading {
   color: #447ADB;
   font-size: 100px;
   font-weight: 800;
   line-height: 100px;
 }
+
 .page404-bars {
   background-color: #447ADB;
   border-radius: 50%;
@@ -383,16 +387,39 @@ section.section {
   vertical-align: bottom;
   width: 75px;
 }
+
 .page404-bars svg {
   margin-bottom: 30px;
 }
+
 .page404-txt {
   font-weight: 300;
+  font-size: 16px;
+  br {
+    display: none;
+  }
+  h3 {
+    font-size: 2rem;
+  }
+  h5 {
+    font-size: 1.5rem;
+    a {
+      font-size: 1rem;
+      background: $blue;
+      color: white !important;
+&:hover{
+  cursor: pointer;
 }
+      padding: $unit*2;
+    }
+  }
+}
+
 .page404-cta {
   padding: 24px 0;
 
 }
+
 .page404-cta p {
   margin: 0;
   line-height: 24px;
@@ -403,18 +430,30 @@ section.section {
   width: 2px;
   height: 1px;
   border-left: 0;
-  background: rgba(0,0,0,0.1);
+  background: rgba(0, 0, 0, 0.1);
 }
 
 .\--sidebar-fixed::-webkit-scrollbar-thumb {
-  background: rgba($blue,0.8);
+  background: rgba($blue, 0.8);
   border-radius: 0;
   width: 3px;
 }
 
-h2{
-  code{
+h2 {
+  code {
     font-size: inherit !important;
     background: transparent !important;
+  }
+}
+
+section.\--page-body.\--full-width {
+  max-width: 100%;
+}
+
+.not-found {
+  .\--wrap {
+    &::before {
+      display: none;
+    }
   }
 }
