--- a/scss/_components/_highlighting.scss
+++ b/scss/_components/_highlighting.scss
@@ -6,6 +6,27 @@ div.input_area > div.highlight > pre {
 
 }
 
+div.output_area{
+  iframe {
+    max-width: 100%;
+
+  }
+}
+
+div.output_subarea::-webkit-scrollbar {
+  width: 2px;
+  height: 4px;
+  border-left: 0;
+  background: rgba(0,0,0,0.1);
+}
+
+div.output_subarea::-webkit-scrollbar-thumb {
+  background: rgba($blue,0.8);
+  border-radius: 0;
+  width: 3px;
+}
+
+
 .cell div.input_area {
   border: 0;
   background: rgb(244, 244, 248);
@@ -24,7 +45,12 @@ pre {
   min-height: 48px;
 
 }
-
+.inner_cell .icon.copy{
+  display: inline-block;
+}
+html body .rendered_html div.icon.copy{
+  display: none !important;
+}
 .cell .text_cell_render h1 {
   font-weight: 300;
   font-size: 50px;
@@ -34,8 +60,10 @@ pre {
   margin-bottom: 0em;
   margin-top: 0em;
   display: block;
-  white-space: nowrap;
+  white-space: normal;
   margin: 0;
+  display: block !important;
+  overflow:hidden;
 }
 
 .cell h2 {
@@ -49,8 +77,10 @@ pre {
   line-height: 47px;
   color: #0089fe;
   display: block;
-  white-space: nowrap;
+  white-space: normal;
   margin: 0;
+  display: block !important;
+  overflow:hidden;
 }
 
 .cell h3 {
@@ -63,8 +93,10 @@ pre {
   line-height: 40px;
   color: #0089fe;
   display: block;
-  white-space: nowrap;
+  white-space: normal;
   margin: 0;
+  display: block !important;
+  overflow:hidden;
 }
 
 .cell h4 {
@@ -77,8 +109,10 @@ pre {
   line-height: 33px;
   color: #0089fe;
   display: block;
-  white-space: nowrap;
+  white-space: normal;
   margin: 0;
+  display: block !important;
+  overflow:hidden;
 }
 
 .cell h5 {
@@ -91,9 +125,11 @@ pre {
   line-height: 26px;
   color: #0089fe;
   display: block;
-  white-space: nowrap;
+  white-space: normal;
   margin: 0;
   font-style: normal;
+  display: block !important;
+  overflow:hidden;
 }
 
 .cell h6 {
@@ -107,8 +143,10 @@ pre {
   color: #0089fe;
   font-style: normal;
   display: block;
-  white-space: nowrap;
+  white-space: normal;
   margin: 0;
+  display: block !important;
+  overflow:hidden;
 }
 
 .cell h1:hover .anchor-link,
@@ -127,7 +165,7 @@ pre {
 .cell div.text_cell_render {
   font-family: "Open sans", verdana, arial, sans-serif;
   //line-height: 110%;
-  text-align: justify;
+  text-align: left;
   text-justify: inter-word;
   //color: #1e4a7b;
   //font-weight: 300;
