--- a/scss/_components/_sidebar.scss
+++ b/scss/_components/_sidebar.scss
@@ -793,7 +793,8 @@ aside {
   &--list {
     display: flex;
     align-items: stretch;
-    margin-top:$unit*2;
+    flex-wrap: wrap;
+    margin-top: $unit*2;
     @include handheld {
       max-width: 100%;
       flex-wrap: wrap;
@@ -805,6 +806,7 @@ aside {
     display: flex;
     align-items: stretch;
     margin-right: $unit;
+    margin-bottom:$unit;
 
     @include handheld {
 
