--- a/scss/_pages/_getting-started.scss
+++ b/scss/_pages/_getting-started.scss
@@ -35,6 +35,21 @@ main.getting-started {
 
 }
 
+h1, h2, h3, h4, h5, h6{
+  display: block !important;
+  div.icon.copy{
+    display: inline-block !important;
+  }
+
+}
+.rendered_html{
+  h2{
+    div.icon.copy{
+      display: none !important;
+    }
+
+  }
+}
 a.anchor-link {
   display: none !important;
 }
