--- a/scss/_pages/_tutorial-index.scss
+++ b/scss/_pages/_tutorial-index.scss
@@ -1,6 +1,27 @@
 .\--page-body {
-  //flex: 1;
+  flex: 1;
   padding-left:0 !important;
+  max-width: calc(100% - 220px);
+  overflow-x: hidden;
+  @include handheld {
+    min-width: 100%;
+  }
+
+}
+body:-moz-handler-blocked  {
+  .\--page-body {
+    flex: 1;
+    padding-left:0 !important;
+  }
+}
+
+body:not(:-moz-handler-blocked)  {
+  main.\--page {
+    .\--page-body {
+      max-width: calc(100% - 220px);
+      //padding-left:220px !important;
+    }
+  }
 }
 
 .\--index {
@@ -390,7 +411,7 @@ body {
     flex-direction: column;
     header {
       width: 100%;
-      flex: 0;
+      //flex: 1;
       background: $blue;
       padding: $unit;
       * {
@@ -500,6 +521,7 @@ div.row {
   display: flex;
   width: 100%;
   h1, h2, h3, h4, h5, h6 {
+
     width: 100%;
     a {
       //width: 100%;
