added a thumbnail div for the streaming section

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -652,6 +652,10 @@
                     <a href="/python/streaming-tutorial/">
                         {% endif %}
                         <div class="--item-meta"><span>Real-Time Streaming</span></div>
+                        <div class="--item-image">
+                            <span>View Tutorial</span>
+                            <img src="https://images.plot.ly/plotly-documentation/thumbnail/streaming.gif" alt="Streaming">
+                        </div>
                     </a>
 
             </li>
