changed title for statistical charts

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -268,7 +268,11 @@
 {% if statistical %}
 
 <section class="--tutorial-section" id="statistical-charts">
+    {% if page.language == "python" or page.language == "matplotlib" or page.language == "pandas" %}
+    <header class="--section-header"><a href="#statistical-charts">Statistical and Seaborn-style Charts</a>
+    {% else %}
     <header class="--section-header"><a href="#statistical-charts">Statistical Charts</a>
+    {% endif %}
         <div class="icon copy" data-tooltip="Click to copy direct link.">
             <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                 <path fill="#000000"
