Refactored + updates to gulp file for dev workflow
Refactored the css for the tutorial index grids and cards
Updated gulp file with changes to allow for local dev with browsersync

--- a/all_static/css/main.css
+++ b/all_static/css/main.css
@@ -7653,16 +7653,6 @@ body:not(:-moz-handler-blocked) main.\--page .\--page-body {
       overflow: hidden !important; } }
   .\--tutorial-index .\--tutorial-section:not(:last-of-type) {
     position: relative; }
-    .\--tutorial-index .\--tutorial-section:not(:last-of-type)::before {
-      content: '';
-      left: 20px;
-      top: 100%;
-      margin-top: -1px;
-      width: -webkit-calc(83.25% - 40px);
-      width: calc(83.25% - 40px);
-      background: #ebebf2;
-      height: 1px;
-      position: absolute; }
   .\--tutorial-index .\--tutorial-section header.\--section-header {
     padding: 20px;
     font-size: 2rem;
@@ -7692,177 +7682,6 @@ body:not(:-moz-handler-blocked) main.\--page .\--page-body {
           fill: #447bdc; }
       .\--tutorial-index .\--tutorial-section header.\--section-header div.icon svg path {
         fill: #afafaf; }
-  .\--tutorial-index .\--tutorial-section.no-image ul {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    border-right: 1px solid #e7e7e7;
-    border-bottom: 1px solid #e7e7e7;
-    margin-top: 20px; }
-    .\--tutorial-index .\--tutorial-section.no-image ul li {
-      border: 1px solid #e7e7e7;
-      border-bottom: 0;
-      border-right: 0;
-      -webkit-box-flex: 1;
-      -webkit-flex: 1 1 50%;
-      -ms-flex: 1 1 50%;
-      flex: 1 1 50%; }
-      .\--tutorial-index .\--tutorial-section.no-image ul li a {
-        padding: 20px;
-        display: block; }
-        .\--tutorial-index .\--tutorial-section.no-image ul li a:hover {
-          background: #efefef; }
-  .\--tutorial-index .\--tutorial-section:not(.no-image) ul {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-box-align: start;
-    -webkit-align-items: flex-start;
-    -ms-flex-align: start;
-    align-items: flex-start;
-    padding: 5px;
-    padding-bottom: 20px; }
-    @media (max-width: 584px) {
-      .\--tutorial-index .\--tutorial-section:not(.no-image) ul {
-        -webkit-justify-content: space-around;
-        -ms-flex-pack: distribute;
-        justify-content: space-around; } }
-    .\--tutorial-index .\--tutorial-section:not(.no-image) ul li {
-      -webkit-box-flex: 1;
-      -webkit-flex: 1 1 -webkit-calc(25% - 20px);
-      -ms-flex: 1 1 calc(25% - 20px);
-      flex: 1 1 calc(25% - 20px);
-      margin-right: 20px;
-      margin-top: 20px;
-      padding: 0 !important;
-      max-width: 162px;
-      background: #f4f4f8 !important;
-      border: 1px solid #e7e7e7; }
-      @media (max-width: 584px) {
-        .\--tutorial-index .\--tutorial-section:not(.no-image) ul li {
-          margin-right: 0; } }
-      .\--tutorial-index .\--tutorial-section:not(.no-image) ul li img {
-        max-width: 160px;
-        height: 160px;
-        width: 160px !important; }
-      .\--tutorial-index .\--tutorial-section:not(.no-image) ul li a {
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-        flex-direction: column; }
-        .\--tutorial-index .\--tutorial-section:not(.no-image) ul li a::before {
-          display: none; }
-      .\--tutorial-index .\--tutorial-section:not(.no-image) ul li .\--item-meta {
-        padding: 20px;
-        min-height: 130px;
-        font-size: 1.3rem;
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-align: center;
-        -webkit-align-items: center;
-        -ms-flex-align: center;
-        align-items: center;
-        -webkit-box-ordinal-group: 3 !important;
-        -webkit-order: 2 !important;
-        -ms-flex-order: 2 !important;
-        order: 2 !important;
-        border-top: 1px solid #e7e7e7; }
-      .\--tutorial-index .\--tutorial-section:not(.no-image) ul li:hover {
-        -webkit-transition-delay: 0s;
-        transition-delay: 0s;
-        background: white !important; }
-        .\--tutorial-index .\--tutorial-section:not(.no-image) ul li:hover * {
-          -webkit-transition-delay: 0s;
-          transition-delay: 0s; }
-        .\--tutorial-index .\--tutorial-section:not(.no-image) ul li:hover .\--item-image {
-          -webkit-transition-delay: 0s;
-          transition-delay: 0s; }
-          .\--tutorial-index .\--tutorial-section:not(.no-image) ul li:hover .\--item-image span::before {
-            -webkit-transform: scale(1);
-            -ms-transform: scale(1);
-            transform: scale(1); }
-          .\--tutorial-index .\--tutorial-section:not(.no-image) ul li:hover .\--item-image * {
-            -webkit-transition-delay: 0s;
-            transition-delay: 0s; }
-          .\--tutorial-index .\--tutorial-section:not(.no-image) ul li:hover .\--item-image img {
-            opacity: 0;
-            -webkit-transition-delay: 0s;
-            transition-delay: 0s; }
-          .\--tutorial-index .\--tutorial-section:not(.no-image) ul li:hover .\--item-image span {
-            opacity: 1;
-            margin-left: 0;
-            -webkit-transition-delay: 0s;
-            transition-delay: 0s; }
-      .\--tutorial-index .\--tutorial-section:not(.no-image) ul li .\--item-image {
-        -webkit-transition: 0.2s ease-in-out all;
-        transition: 0.2s ease-in-out all;
-        max-height: 160px;
-        position: relative;
-        background: #447bdc;
-        max-width: 160px; }
-        .\--tutorial-index .\--tutorial-section:not(.no-image) ul li .\--item-image span {
-          -webkit-transition: 0.2s all ease-in-out;
-          transition: 0.2s all ease-in-out;
-          margin-left: -20px;
-          opacity: 0;
-          height: 100%;
-          width: 100%;
-          display: -webkit-box;
-          display: -webkit-flex;
-          display: -ms-flexbox;
-          display: flex;
-          -webkit-box-align: center;
-          -webkit-align-items: center;
-          -ms-flex-align: center;
-          align-items: center;
-          padding-left: 20px;
-          position: absolute;
-          color: white;
-          font-size: 1.25rem;
-          font-weight: 300; }
-          .\--tutorial-index .\--tutorial-section:not(.no-image) ul li .\--item-image span::before {
-            -webkit-transition: 0.2s transform ease-in-out 0.15s;
-            transition: 0.2s transform ease-in-out 0.15s;
-            -webkit-transform-origin: left;
-            -ms-transform-origin: left;
-            transform-origin: left;
-            content: '';
-            left: 20px;
-            top: 50%;
-            margin-top: 1.5rem;
-            width: 40%;
-            background: #e4e4ee;
-            height: 4px;
-            position: absolute;
-            opacity: 0.3;
-            -webkit-transform: scaleX(0);
-            -ms-transform: scaleX(0);
-            transform: scaleX(0); }
-        .\--tutorial-index .\--tutorial-section:not(.no-image) ul li .\--item-image img {
-          -webkit-transition: 0.2s ease-in-out all;
-          transition: 0.2s ease-in-out all; }
-    .\--tutorial-index .\--tutorial-section:not(.no-image) ul:hover * {
-      -webkit-transition-delay: 0s;
-      transition-delay: 0s; }
-    .\--tutorial-index .\--tutorial-section:not(.no-image) ul:hover .\--item-meta {
-      opacity: 1; }
-      .\--tutorial-index .\--tutorial-section:not(.no-image) ul:hover .\--item-meta span {
-        opacity: 1; }
 
 body {
   position: relative; }
@@ -8444,3 +8263,210 @@ pre, code, .hljs {
   background: #f4f4f8 !important;
   font-size: 1rem;
   line-height: 1.5rem; }
+
+.\--tutorial-section:not(.no-image) .\--grid {
+  padding-top: 20px; }
+  .\--tutorial-section:not(.no-image) .\--grid-list {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    padding: 5px;
+    padding-bottom: 20px; }
+    @media (max-width: 584px) {
+      .\--tutorial-section:not(.no-image) .\--grid-list {
+        padding: 0;
+        padding-bottom: 20px;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+        -ms-flex-pack: center;
+        justify-content: center; } }
+  .\--tutorial-section:not(.no-image) .\--grid-item {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 1 -webkit-calc(162px);
+    -ms-flex: 1 1 calc(162px);
+    flex: 1 1 calc(162px);
+    width: -webkit-calc(162px - 20px);
+    width: calc(162px - 20px);
+    max-width: 162px;
+    background: #f4f4f8 !important;
+    border: 1px solid #e7e7e7;
+    margin-right: 20px;
+    margin-top: 20px;
+    padding: 0 !important; }
+    @media (max-width: 1023px) {
+      .\--tutorial-section:not(.no-image) .\--grid-item {
+        -webkit-box-flex: 1;
+        -webkit-flex: 1 1 -webkit-calc(162px);
+        -ms-flex: 1 1 calc(162px);
+        flex: 1 1 calc(162px);
+        width: -webkit-calc(162px);
+        width: calc(162px);
+        max-width: -webkit-calc(162px);
+        max-width: calc(162px);
+        min-width: -webkit-calc(162px);
+        min-width: calc(162px);
+        margin: 0;
+        margin-bottom: 20px;
+        margin-right: 20px; } }
+    @media (max-width: 584px) {
+      .\--tutorial-section:not(.no-image) .\--grid-item {
+        -webkit-box-flex: 1;
+        -webkit-flex: 1 1 -webkit-calc(50% - 20px);
+        -ms-flex: 1 1 calc(50% - 20px);
+        flex: 1 1 calc(50% - 20px);
+        width: -webkit-calc(162px);
+        width: calc(162px);
+        max-width: -webkit-calc(162px);
+        max-width: calc(162px);
+        min-width: -webkit-calc(162px);
+        min-width: calc(162px);
+        margin: 0;
+        margin-bottom: 20px; }
+        .\--tutorial-section:not(.no-image) .\--grid-item:nth-of-type(odd) {
+          margin-right: 20px; } }
+    .\--tutorial-section:not(.no-image) .\--grid-item img {
+      max-width: 160px;
+      height: 160px;
+      width: 160px !important; }
+    .\--tutorial-section:not(.no-image) .\--grid-item a {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+      flex-direction: column; }
+      .\--tutorial-section:not(.no-image) .\--grid-item a::before {
+        display: none; }
+    .\--tutorial-section:not(.no-image) .\--grid-item .\--item-meta {
+      min-height: 130px;
+      padding: 20px;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-box-ordinal-group: 3 !important;
+      -webkit-order: 2 !important;
+      -ms-flex-order: 2 !important;
+      order: 2 !important;
+      border-top: 1px solid #e7e7e7;
+      font-size: 1.3rem; }
+    .\--tutorial-section:not(.no-image) .\--grid-item .\--item-image {
+      position: relative;
+      background: #447bdc;
+      width: 160px;
+      min-width: 160px;
+      max-width: 160px;
+      height: 160px;
+      min-height: 160px;
+      max-height: 160px;
+      -webkit-transition: 0.2s ease-in-out all;
+      transition: 0.2s ease-in-out all; }
+      .\--tutorial-section:not(.no-image) .\--grid-item .\--item-image span {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+        -ms-flex-align: center;
+        align-items: center;
+        padding-left: 20px;
+        margin-left: -20px;
+        color: white;
+        font-size: 1.25rem;
+        font-weight: 300;
+        opacity: 0;
+        -webkit-transition: 0.2s all ease-in-out;
+        transition: 0.2s all ease-in-out; }
+        .\--tutorial-section:not(.no-image) .\--grid-item .\--item-image span::before {
+          content: '';
+          position: absolute;
+          left: 20px;
+          top: 50%;
+          margin-top: 1.5rem;
+          width: 40%;
+          height: 4px;
+          background: #e4e4ee;
+          opacity: 0.3;
+          -webkit-transform-origin: left;
+          -ms-transform-origin: left;
+          transform-origin: left;
+          -webkit-transform: scaleX(0);
+          -ms-transform: scaleX(0);
+          transform: scaleX(0);
+          -webkit-transition: 0.2s transform ease-in-out 0.15s;
+          transition: 0.2s transform ease-in-out 0.15s; }
+      .\--tutorial-section:not(.no-image) .\--grid-item .\--item-image img {
+        -webkit-transition: 0.2s ease-in-out all;
+        transition: 0.2s ease-in-out all;
+        display: block; }
+    @media (min-width: 1024px) {
+      .\--tutorial-section:not(.no-image) .\--grid-item:hover {
+        background: white !important; }
+        .\--tutorial-section:not(.no-image) .\--grid-item:hover .\--item-image span::before {
+          -webkit-transform: scale(1);
+          -ms-transform: scale(1);
+          transform: scale(1); }
+        .\--tutorial-section:not(.no-image) .\--grid-item:hover .\--item-image img {
+          opacity: 0; }
+        .\--tutorial-section:not(.no-image) .\--grid-item:hover .\--item-image span {
+          opacity: 1;
+          margin-left: 0; } }
+
+.\--tutorial-section.no-image .\--grid {
+  display: block; }
+  .\--tutorial-section.no-image .\--grid-list {
+    -webkit-columns: 2;
+    -moz-columns: 2;
+    columns: 2;
+    border: 1px solid #e7e7e7;
+    margin-top: 20px;
+    -webkit-column-gap: 0;
+    -moz-column-gap: 0;
+    column-gap: 0; }
+    @media (max-width: 1023px) {
+      .\--tutorial-section.no-image .\--grid-list {
+        -webkit-columns: 1;
+        -moz-columns: 1;
+        columns: 1; } }
+  .\--tutorial-section.no-image .\--grid-item {
+    background: white;
+    width: 100%;
+    margin: 0;
+    border: 0;
+    -webkit-column-break-inside: avoid;
+    /* Chrome, Safari */
+    page-break-inside: avoid;
+    /* Theoretically FF 20+ */
+    break-inside: avoid-column;
+    /* IE 11 */
+    display: table; }
+    @media (max-width: 1023px) {
+      .\--tutorial-section.no-image .\--grid-item:not(:last-of-type) a {
+        border-bottom: 1px solid #e7e7e7; } }
+    .\--tutorial-section.no-image .\--grid-item a {
+      padding: 15px;
+      display: block; }
+      .\--tutorial-section.no-image .\--grid-item a:hover {
+        background: whitesmoke; }
+
+.\--tutorial-section.no-image .\--item-meta {
+  padding: 0; }
