--- a/scss/_pages/_tutorial-index.scss
+++ b/scss/_pages/_tutorial-index.scss
@@ -132,14 +132,14 @@ body:not(:-moz-handler-blocked)  {
       //border-bottom: $border;
       position: relative;
       &::before {
-        content: '';
-        left: $unit*2;
-        top: 100%;
-        margin-top: -1px;
-        width: calc(83.25% - 40px);
-        background: darken($lb, 3%);
-        height: 1px;
-        position: absolute;
+        //content: '';
+        //left: $unit*2;
+        //top: 100%;
+        //margin-top: -1px;
+        //width: calc(83.25% - 40px);
+        //background: darken($lb, 3%);
+        //height: 1px;
+        //position: absolute;
       }
 
     }
@@ -182,174 +182,9 @@ body:not(:-moz-handler-blocked)  {
       }
 
     }
-    &.no-image {
-      ul {
-        display: flex;
-        flex-wrap: wrap;
-        border-right: $border;
-        border-bottom: $border;
-        margin-top: $unit*2;
-        li {
-          border: $border;
-          border-bottom: 0;
-          border-right: 0;
-          flex: 1 1 50%;
-          a {
-            padding: $unit*2;
-            display: block;
-            &:hover{
-              background: $slg;
-            }
-          }
-        }
-      }
-    }
+
     &:not(.no-image) {
 
-      ul {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: flex-start;
-        padding: $unit/2;
-        padding-bottom: $unit*2;
-        @include handheld {
-          justify-content: space-around;
-        li:nth-of-type(odd){
-          //margin-right:$unit*2;
-        }
-
-        }
-
-        li {
-          flex: 1 1 calc(25% - 20px);
-          margin-right: $unit*2;
-          margin-top: $unit*2;
-          padding:0 !important;
-          @include handheld {
-            margin-right:0;
-          }
-          //max-width: 160px;
-          max-width: 162px;
-          background: $lb !important;
-          //padding:$unit;
-          border: $border;
-
-          //border: $border;
-          img {
-            max-width: 160px;
-            height: 160px;
-            width: 160px !important;
-
-          }
-          a {
-            &::before {
-              display: none;
-            }
-            display: flex;
-            flex-direction: column;
-          }
-          .\--item-meta {
-            padding: $unit*2;
-            //border-right:0;
-            min-height: 130px;
-            font-size: 1.3rem;
-            display: flex;
-            align-items: center;
-            order: 2 !important;
-            border-top: $border;
-          }
-          &:hover {
-            transition-delay: 0s;
-            background: white !important;
-            * {
-              transition-delay: 0s;
-
-            }
-            .\--item-image {
-              transition-delay: 0s;
-              span::before {
-                transform: scale(1);
-              }
-              * {
-                transition-delay: 0s;
-
-              }
-              img {
-                opacity: 0;
-                transition-delay: 0s;
-
-              }
-              span {
-                opacity: 1;
-                margin-left: 0;
-                //transition:none;
-                transition-delay: 0s;
-
-              }
-            }
-
-          }
-          .\--item-image {
-            transition: 0.2s ease-in-out all;
-            max-height: 160px;
-            position: relative;
-            background: $blue;
-            max-width: 160px;
-
-            span {
-              transition: 0.2s all ease-in-out;
-              margin-left: -20px;
-              opacity: 0;
-              height: 100%;
-              width: 100%;
-
-              display: flex;
-              align-items: center;
-              padding-left: $unit*2;
-              position: absolute;
-
-              color: white;
-
-              font-size: 1.25rem;
-              font-weight: 300;
-              //position: relative;
-              &::before {
-                transition: 0.2s transform ease-in-out 0.15s;
-
-                transform-origin: left;
-                content: '';
-                left: $unit*2;
-                top: 50%;
-                margin-top: 1.5rem;
-                width: 40%;
-                background: darken($lb, 5%);
-                height: 4px;
-                position: absolute;
-                opacity: 0.3;
-                transform: scaleX(0);
-              }
-            }
-            img {
-              transition: 0.2s ease-in-out all;
-
-            }
-          }
-
-        }
-        &:hover {
-          //background: white;
-          * {
-            transition-delay: 0s;
-
-          }
-          .\--item-meta {
-            opacity: 1;
-            span {
-              opacity: 1;
-            }
-          }
-        }
-      }
     }
 
   }
