--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,8 +25,10 @@
 
     <!-- Main Stylesheets -->
     <link rel="stylesheet" type="text/css" href="https://images.plot.ly/assets/css/normalize.css">
-<!--     <link rel="stylesheet" type="text/css" href="{{site.stylesheet}}"> -->
     <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/main.css?version={{ site.data.cache_bust_css | truncate: 10, '' }}">
+
+    <!-- LOCAL DEV STYLESHEET -->
+    <!--<link rel="stylesheet" type="text/css" href="http://api.plotly.dev/all_static/css/main.css">-->
 
     <!-- Icon -->
     <link rel="shortcut icon" href="/images/plotly-ico.png" type="image/x-icon"/>
