--- a/_layouts/user-guide.html
+++ b/_layouts/user-guide.html
@@ -78,6 +78,9 @@
 							{% if page.language == "nodejs" %}
 							<img src="https://nodejs.org/static/images/logos/nodejs-new-pantone-black.png" alt="Nodejs">
 							{% endif %}
+							{% if page.language == "scala" %}
+							<img src="http://images.plot.ly/plotly-documentation/thumbnail/scala-small.jpg" alt="Scala">
+							{% endif %}
 
 						</div>
 						<div class="--body">
