--- a/_layouts/getstart.html
+++ b/_layouts/getstart.html
@@ -76,6 +76,10 @@
 							<img src="https://nodejs.org/static/images/logos/nodejs-new-pantone-black.png" alt="">
 
 							{% endif %}
+							{% if page.language == "scala" %}
+							<img src="http://images.plot.ly/plotly-documentation/thumbnail/scala-small.jpg" alt="Scala">
+							{% endif %}
+
 							{% if page.language == "ggplot2" %}
 							<img src="http://help.plot.ly/images/plotly-hist-logo_150w.png" alt="">
 							{% endif %}
